--- a/day 21/homework.html
+++ b/day 21/homework.html
@@ -11,9 +11,9 @@
 <body>
 <H1 style="color: green;">ყველა რაზმის ლიდერის მოსწავლები GOA-ში</H1>
 
-      <table border="1">
+      <table bgcolor="green" border="1">
 <tr>
-<td style="color: green;">კერესალიძე</td>
+<td  style="color: blue;">კერესალიძე</td>
 <td>ელენე მახარაძე</td>
  <td>თათული ბოჟაზე</td>
 <td>ნინი ლობჟანიძე</td>
@@ -23,14 +23,14 @@
 <td>ალექს რაჟავი</td>
 </tr>
 <tr>
-<td style="color: green;">გაბრიელი</td>
+<td style="color: blue;">გაბრიელი</td>
 <td>ლუკა ფირცხალაიშვილი</td>
 <td>ვანიკო სანო</td>
 <td>ერეკლე გოჩიდაშვილი</td>
 <td>მირიამ მსხილეძე</td>
 </tr>
 <tr>
-<td style="color: green;">ჯანეზაშვილი</td>
+<td style="color: blue;" >ჯანეზაშვილი</td>
 <td>საბა წიქარაშვილი</td>
 <td>ანი ნოზაძე</td>
 <td>ნიკოლოზ ჩაგენავა</td>
@@ -43,7 +43,7 @@
 <td>ბექა ბეჟანიშვილი</td>
 </tr>
 <tr>
-<td style="color: green;">გაგნიძე</td>
+<td style="color: blue;">გაგნიძე</td>
 <td>ლაშა ზაზაშვილი</td>
 <td>ლუკა გიორგაძე</td>
 <td>ლუკა ლუკა?</td>
@@ -55,14 +55,14 @@
 <td>თემო თემო</td>
 </tr>
 <tr>
-<td style="color: green;">ფილაშვილი</td>
+<td style="color: blue;">ფილაშვილი</td>
 <td>გიო მურაჩაშვილი</td>
 <td>შიო ელიკაშვილი</td>
 <td>დავით ბერია</td>
 </tr>
 <tr>
-<td style="color: green;">ტყეშელაშვილი</td>
-<td>იოანე ჭონაშვილი</td>
+<td style="color: blue;">ტყეშელაშვილი</td>
+<td >იოანე ჭონაშვილი</td>
 </tr>
       </table> 
 
