--- a/day 24/homework.html
+++ b/day 24/homework.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -19,7 +17,7 @@
 
 <h1 id="of">this is a photo of html</h1>
 
-   <img src="h.webp" alt="">
+   <img src="luka.webp" alt="">
     <hr>
 <a href="https://www.w3schools.com/html/">this is an html site thet you can learn html very wall</a>
 
