--- a/day 47/homework.html
+++ b/day 47/homework.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>abaut my salf</title>
+    <title>luka pircxalaishvili</title>
     <link rel="stylesheet" href="homework.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
 
       </div>
       <div class="conteiner2">
-        
+
         <p class="lorms">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati pariatur eum, vel sint, quisquam natus sapiente quibusdam minima quo, ab rem alias quidem tempora suscipit placeat ea atque esse. Magnam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias ipsum provident debitis omnis soluta, at non asperiores voluptate? Eligendi vel illum similique libero doloribus, consectetur dolor architecto officia sed voluptatum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum aliquid quis dicta labore cum veritatis consectetur asperiores ratione ullam? Quaerat saepe tenetur placeat obcaecati natus eaque pariatur maxime ipsam nobis?</p>
 
        
