--- a/day 49/homework.html
+++ b/day 49/homework.html
@@ -14,22 +14,22 @@
         <div id="conteiner">
             <div id="itam1">
                 <h1>calculetor</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                <p style="color: grey;">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
                 <img id="img" src="fyfgeyf.jpg" alt="">
             </div>
             <div id="itam2">
                 <h1>team builder</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p style="color: grey;">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <img src="How-to-add-a-search-bar-in-WordPress-1024x640.png" alt="">
             </div>
             <div id="itam3">
                 <h1>calculetor</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                <p style="color: grey;">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                 <img src="Soulver3Icon-New.png" alt="">
             </div>
             <div id="itam4">
                 <h1>karma</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p style="color: grey;">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <img src="images-e1481706879586.jpg" alt="">
             </div>
         </div>
