--- a/day 52/homework.html
+++ b/day 52/homework.html
@@ -10,15 +10,15 @@
 
     <img src="img1.jpg" id="Goa">
 <br>
-    <button onclick="Goa.src='dogimg.webp'">Dog</button>
+    <button onclick="Goa.src='dogimg.webp'">Dog</button id="Dog">
 
-    <button onclick="Goa.src='img1.jpg'">Goa</button>
+    <button onclick="Goa.src='img1.jpg'">Goa</button id="Goa">
 
-    <button onclick="Goa.src='Ge.png'">georgea</button>
+    <button onclick="Goa.src='Ge.png'">georgea</button id="Georgea">
 
-    <button onclick="Goa.src='sigma.jpg'">sigma</button>
+    <button onclick="Goa.src='sigma.jpg'">sigma</button id="sigma">
 
-    <button onclick="Goa.src='my dreme.webp'">my drem</button>
+    <button onclick="Goa.src='my dreme.webp'">my drem</button id="money">
  
 </body>
 </html>
