--- a/day 57/homework.html
+++ b/day 57/homework.html
@@ -12,13 +12,16 @@
 <br>
     <button onclick="Goa.src='dog.jpeg'">Dog</button id="Dog">
 
-    <button onclick="Goa.src='Goa.jpg'">Goa</button id="Goa">
+    <button onclick="Goa.src='cat.webp'">cat</button id="Goa">
 
     <button onclick="Goa.src='Geo.png'">Georgea</button id="Georgea">
 
     <button onclick="Goa.src='sigma.jpg'">sigma</button id="sigma">
 
     <button onclick="Goa.src='money.jpg'">my drem</button id="money">
+
+    <button onclick="Goa.src='Goa.jpg'">GOA</button id="money">
+
 
 <script src="homework.js"></script>
 </body>
