--- a/day 71/homework.html
+++ b/day 71/homework.html
@@ -9,7 +9,7 @@
 <body>
 <div id="div1">
     <h1 id="main">0</h1>
-    <button id="btn">in</button>
+    <button id="btn">incris</button>
 </div>
 <div id="div"></div>
 </body>
